css/chata-styles.css
/* ... */
.autoql-vanilla-drawer-content{
    width: calc(100%);
    height: 100%;
    max-height: calc(100% - 150px);
    /* overflow: hidden; */
    /* overflow-y: auto;
    overflow-x: visible; */
    /* padding: 20px; */
    flex: 1;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 0%;
    background: var(--chata-drawer-background-color);
    /* position: relative; */
}

.autoql-vanilla-drawer-content:hover{
    /* overflow: auto; */
    /* overflow-y: auto; */
    /* width: 100%; */
}

.autoql-vanilla-chata-scrollbox {
  width: 100%;
  height: 100%;
  max-height: calc(100% - 150px);
  overflow: auto;
  visibility: hidden;
}

.autoql-vanilla-drawer-content, .autoql-vanilla-chata-scrollbox:hover, .autoql-vanilla-chata-scrollbox:focus {
  visibility: visible;
}

.autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble {
    position: relative;
    margin: 10px 0px 10px 10px;
    padding: 13px;
    border-radius: 10px;
    max-width: calc(100% - 20px);
    word-wrap: break-word;
    font-family: var(--chata-drawer-font-family);
    font-size: 14px;
    letter-spacing: 0.04em;
    border: 1px solid var(--chata-drawer-border-color);
    background: var(--chata-drawer-background-color);
    color: var(--chata-drawer-text-color-primary);
    min-width: 317px;
}

.autoql-vanilla-chat-message-bubble.single{
    min-width: auto;
}

.autoql-vanilla-chat-message-bubble.simple-response{
    min-width: 125px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.autoql-vanilla-chat-message-bubble.no-hover-response .autoql-vanilla-chata-single-response:hover{
    text-decoration: none;
    color: rgb(93,93,93);
    cursor: default;
}

.autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble.text {
    max-width: 85%;
}

.autoql-vanilla-chat-single-message-container.response {
    display: flex;
    justify-content: flex-start;
    margin-left: 10px;
    max-height: 85%;
    -webkit-animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    /* z-index: 1000; */
    position: relative;
}

.autoql-vanilla-chata-animation-message{
    display: flex;
    justify-content: flex-start;
    margin-left: 10px;
    max-height: 85%;
    -webkit-animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.autoql-vanilla-chata-response-content-container {
    background-color: inherit;
    font-size: 14px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: inherit;
    font-size: 14px;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.autoql-vanilla-chat-single-message-container.request {
    display: flex;
    justify-content: flex-end;
    margin-right: 20px;
    -webkit-animation: scale-up-br 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-br 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.autoql-vanilla-chat-single-message-container.request .autoql-vanilla-chat-message-bubble {
    background: var(--chata-drawer-accent-color);
    border: 1px solid var(--chata-drawer-accent-color);
    color: white;
    /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
}

.autoql-vanilla-chata-bar-container {
    position: relative;
}

.autoql-vanilla-chata-bar-container.query-input{
    display: flex;
}

.autoql-vanilla-wrapper-input{
    position: relative;
    width: 100%;
}

.autoql-vanilla-watermark {
    color: var(--chata-drawer-text-color-primary);
    text-align: center;
    opacity: 0.2;
    display: block;
    margin-bottom: 7px;
    width: calc(100% - 10px);
    font-size: 13px;
    font-family: sans-serif;
}

.autoql-vanilla-text-bar{
    display: flex;
    position: relative;
}
.autoql-vanilla-text-bar-animation{
    animation: 0.5s ease 0s 1 normal none running slideDown;
}
.autoql-vanilla-chata-input {
    padding: 10px !important;
    padding-left: 20px !important;
    margin: 10px !important;
    height: 42px !important;
    box-sizing: border-box !important;
    border-radius: 24px !important;
    font-size: 16px !important;
    font-family: var(--chata-drawer-font-family) !important;
    letter-spacing: 0.04em !important;
    outline: none !important;
    width: calc(100% - 20px);
    background: transparent !important;
    border: 1px solid var(--chata-drawer-border-color) !important;
    color: var(--chata-drawer-text-color-primary) !important;
}
.autoql-vanilla-chata-input-full-width{
    width: 100%;
}
.autoql-vanilla-chata-input:hover, .autoql-vanilla-chata-input-renderer:hover{
    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1) !important;
}

.autoql-vanilla-chata-input:focus, .autoql-vanilla-chata-input-renderer:focus{
    border-color: transparent !important;
    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1) !important;
}

.autoql-vanilla-chata-input::placeholder{
    color: var(--chata-drawer-text-color-placeholder);
}

.autoql-vanilla-chata-input-renderer {
    padding: 10px !important;
    padding-left: 20px !important;
    margin: 10px !important;
    height: 42px !important;
    box-sizing: border-box !important;
    border-radius: 24px !important;
    font-size: 16px !important;
    font-family: var(--chata-drawer-font-family) !important;
    letter-spacing: 0.04em !important;
    outline: none !important;
    width: calc(100% - 20px) !important;
    background: white !important;
    border: 1px solid #d3d3d352 !important;
    color: #5d5d5d !important;
}
/* ... */

